Fixed update button not active on adding topic

--- a/src/app/pages/academics/e-learning/e-learning-admin/e-learning-create-course/e-learning-create-course.component.html
+++ b/src/app/pages/academics/e-learning/e-learning-admin/e-learning-create-course/e-learning-create-course.component.html
@@ -205,7 +205,7 @@
         </fieldset>
       </section>
     </fieldset>
-    <section class="col-lg-12">
+    <section class="col-lg-12 p-0">
       <app-validate-submit-buttons [isSubmitting]='submitInProgressAction$ | ngrxPush'
                                    (validationButtonClicked)='triggerValidationSubject$.next(true)'
                                    [formItem]='newCourseForm'>
