--- a/src/app/pages/academics/e-learning/e-learning-admin/e-learning-admin.component.html
+++ b/src/app/pages/academics/e-learning/e-learning-admin/e-learning-admin.component.html
@@ -1,16 +1,17 @@
 <h1>E Learning Admin</h1>
 <ng-container *ngIf='filteredCourses$ | ngrxPush as filteredCourses; else contentLoading'>
-  <section class="d-flex justify-content-around align-items-center">
+<div class="card p-2">
+  <section class="d-flex justify-content-between align-items-end flex-wrap">
 
-    <section class="col-lg-8">
+    <section class="col-lg-4 col-md-6 col-sm-6">
       <label for="search">Search Courses</label>
       <input (keyup)="filterStringSubject$.next($event.target.value)" type="search" id='search' class='form-control'>
     </section>
     <button class="btn btn-primary" [routerLink]='["create-course"]'><span class="icon-plus-circled"></span>New
-      Course</button>
+      Course
+    </button>
   </section>
   <section class="mt-2">
-
     <ul class="d-flex justify-content-start flex-wrap p-3">
       <li *ngFor='let course of filteredCourses' class="list-group-item bg-none list-group-flush p-0 col-lg-6 mt-2">
         <div class="d-flex flex-wrap justify-content-between align-items-center">
@@ -27,7 +28,12 @@
         </div>
       </li>
     </ul>
+
+    <div *ngIf="filteredCourses.length === 0" class="alert alert-info">
+      <span class="icon-info"></span>No courses found!
+    </div>
   </section>
+</div>
 </ng-container>
 <ng-template #contentLoading>
   <app-loading-bubble></app-loading-bubble>
