--- a/src/app/pages/time-table/academic-years/time-table-academic-year-view/time-table-academic-year-view.component.html
+++ b/src/app/pages/time-table/academic-years/time-table-academic-year-view/time-table-academic-year-view.component.html
@@ -1,32 +1,42 @@
 <h1>Time Table For Academic Year <span class="icon-right-dir"></span>{{ academicYearName$ | ngrxPush }}</h1>
-<a class="btn btn-primary btn-sm" [routerLink]='["edit"]'><span class="icon-edit"></span>Edit time table</a>
-<accordion [closeOthers]='true' [isAnimated]='true'>
-  <accordion-group class="mt-2" *ngFor='let classLevel of timeTableLessons$ | ngrxPush; let i = index' [(isOpen)]="isOpen[i]"
-    [class.active-group]="isOpen[i]">
+<div class="card p-2 d-flex flex-wrap justify-content-end"
+     *ngIf="timeTableLessons$ | ngrxPush as timeTableLessons; else loading">
 
-    <section accordion-heading class="d-flex justify-content-between">
-      <h2 [class.active]="isOpen[i]">{{ classLevel.name }}</h2>
-      <section>
-        <button type="button" class="btn btn-primary btn-sm"><span [class.icon-down-dir]='!isOpen[i]'
-            [class.icon-up-dir]='isOpen[i]'></span>View</button>
+  <div class="col-lg-3">
+    <a class="btn btn-primary btn-sm" [routerLink]='["edit"]'>
+      <span class="icon-edit"></span>Edit time table
+    </a>
+  </div>
+
+  <accordion [closeOthers]='true' [isAnimated]='true' class="col-12">
+    <accordion-group class="mt-2" *ngFor='let classLevel of timeTableLessons; let i = index' [(isOpen)]="isOpen[i]"
+                     [class.active-group]="isOpen[i]">
+
+      <section accordion-heading class="d-flex justify-content-between">
+        <h2 [class.active]="isOpen[i]">{{ classLevel.name }}</h2>
+        <section>
+          <button type="button" class="btn btn-primary btn-sm"><span [class.icon-down-dir]='!isOpen[i]'
+                                                                     [class.icon-up-dir]='isOpen[i]'></span>View
+          </button>
+        </section>
       </section>
-    </section>
-    <section>
+      <section>
 
-      <table class="table table-dark table-bordered">
-        <thead>
+        <table class="table table-dark table-bordered">
+          <thead>
           <th>Day of Week</th>
           <th>Stream</th>
           <th *ngFor='let timing of classLevel.timings'>{{ timing }}</th>
 
-        </thead>
-        <tbody>
+          </thead>
+          <tbody>
           <ng-container *ngFor='let dayOfWeek of classLevel.daysOfWeek'>
             <tr>
               <th [attr.rowspan]='classLevel.streams.length'>{{ dayOfWeek }}</th>
               <td>{{ classLevel.streams[0] }}</td>
               <td *ngFor='let timing of classLevel.timings'>
-                <ng-container *ngIf='classLevel.grouped[dayOfWeek][classLevel.streams[0]] && classLevel.grouped[dayOfWeek][classLevel.streams[0]][timing] as lesson'>
+                <ng-container
+                  *ngIf='classLevel.grouped[dayOfWeek][classLevel.streams[0]] && classLevel.grouped[dayOfWeek][classLevel.streams[0]][timing] as lesson'>
                   <div class="d-flex flex-column">
                     <div class="subject">{{ lesson.subjectName }}</div>
                     <div class="room">{{ lesson.roomAbbr }}</div>
@@ -37,9 +47,10 @@
             </tr>
             <ng-container *ngFor='let stream of classLevel.streams; let i = index'>
               <tr *ngIf='i > 0'>
-                <td >{{ stream }}</td>
+                <td>{{ stream }}</td>
                 <td *ngFor='let timing of classLevel.timings'>
-                  <ng-container *ngIf='classLevel.grouped[dayOfWeek][stream] && classLevel.grouped[dayOfWeek][stream][timing] as lesson'>
+                  <ng-container
+                    *ngIf='classLevel.grouped[dayOfWeek][stream] && classLevel.grouped[dayOfWeek][stream][timing] as lesson'>
                     <div class="d-flex flex-column">
                       <div class="subject">{{ lesson.subjectName }}</div>
                       <div class="room">{{ lesson.roomAbbr }}</div>
@@ -52,8 +63,15 @@
 
           </ng-container>
 
-        </tbody>
-      </table>
-    </section>
-  </accordion-group>
-</accordion>
+          </tbody>
+        </table>
+      </section>
+    </accordion-group>
+  </accordion>
+
+  <div class="alert alert-info mt-2"><span class="icon-info"></span>No time table set up yet</div>
+</div>
+
+<ng-template class="card p-2" #loading>
+  <app-loading-bubble></app-loading-bubble>
+</ng-template>
