updated layout into a card

--- a/src/app/pages/time-table/academic-years/time-table-academic-year-edit/time-table-academic-year-edit.component.html
+++ b/src/app/pages/time-table/academic-years/time-table-academic-year-edit/time-table-academic-year-edit.component.html
@@ -1,32 +1,33 @@
 <h1>Time Table For Academic Year <span class="icon-right-dir"></span>{{ academicYearName$ | ngrxPush }}</h1>
-<div class="d-flex flex-wrap justify-content-between">
-  <a class="btn btn-info btn-sm" [routerLink]='["../"]'><span class="icon-eye"></span>View</a>
+<div class="card p-2">
+  <div class="d-flex flex-wrap justify-content-between">
+    <a class="btn btn-info btn-sm" [routerLink]='["../"]'><span class="icon-eye"></span>View</a>
 
-  <button (click)='saveChanges()' class="btn btn-success btn-sm">Save All Changes <span class="icon-floppy"></span></button>
-</div>
+    <button (click)='saveChanges()' class="btn btn-success btn-sm">Save All Changes <span class="icon-floppy"></span></button>
+  </div>
 
-<accordion *ngIf='timetableLessons$ | ngrxPush ' [closeOthers]='true' [isAnimated]='true'>
-  <accordion-group class="mt-2" *ngFor='let classLevel of timeTableForm$ | ngrxPush; let i = index' [(isOpen)]="isOpen[i]"
-    [class.active-group]="isOpen[i]">
+  <accordion *ngIf='timetableLessons$ | ngrxPush ' [closeOthers]='true' [isAnimated]='true'>
+    <accordion-group class="mt-2" *ngFor='let classLevel of timeTableForm$ | ngrxPush; let i = index' [(isOpen)]="isOpen[i]"
+                     [class.active-group]="isOpen[i]">
 
-    <section accordion-heading class="d-flex justify-content-between">
-      <h2 [class.active]="isOpen[i]">{{ classLevel.name }}</h2>
-      <section>
-        <button type="button" class="btn btn-primary btn-sm"><span [class.icon-down-dir]='!isOpen[i]'
-            [class.icon-up-dir]='isOpen[i]'></span>View</button>
+      <section accordion-heading class="d-flex justify-content-between">
+        <h2 [class.active]="isOpen[i]">{{ classLevel.name }}</h2>
+        <section>
+          <button type="button" class="btn btn-primary btn-sm"><span [class.icon-down-dir]='!isOpen[i]'
+                                                                     [class.icon-up-dir]='isOpen[i]'></span>View</button>
+        </section>
       </section>
-    </section>
-    <section>
+      <section>
 
-      <table class="table table-dark table-bordered">
-        <thead>
+        <table class="table table-dark table-bordered">
+          <thead>
           <tr>
             <th>Day of Week</th>
             <th>Stream</th>
             <th *ngFor='let timing of classLevel.timings'>{{ timing }}</th>
           </tr>
-        </thead>
-        <tbody>
+          </thead>
+          <tbody>
           <ng-container *ngFor='let dayOfWeek of classLevel.weekDays'>
             <tr>
               <th [attr.rowspan]='classLevel.streams.length'>{{ dayOfWeek }}</th>
@@ -35,7 +36,7 @@
                 <button
                   (click)='editLesson({ template:template, classLevelName: classLevel.name, stream:classLevel.streams[0], timing:timing, dayOfWeekName:dayOfWeek, lesson: classLevel.grouped[dayOfWeek] })'
                   hidden aria-label="Edit Lesson" class="btn btn-outline-primary btn-sm"><i
-                    class="icon-edit"></i></button>
+                  class="icon-edit"></i></button>
                 <ng-container
                   *ngIf='classLevel.grouped[dayOfWeek] && classLevel.grouped[dayOfWeek][classLevel.streams[0]] && classLevel.grouped[dayOfWeek][classLevel.streams[0]][timing] as lesson'>
                   <div class="d-flex flex-column">
@@ -53,7 +54,7 @@
                   <button
                     (click)='editLesson({template:template, classLevelName: classLevel.name, stream:stream, timing:timing, dayOfWeekName:dayOfWeek })'
                     hidden aria-label="Edit Lesson" class="btn btn-outline-primary btn-sm"><i
-                      class="icon-edit"></i></button>
+                    class="icon-edit"></i></button>
                   <ng-container
                     *ngIf='classLevel.grouped[dayOfWeek] && classLevel.grouped[dayOfWeek][stream] && classLevel.grouped[dayOfWeek][stream][timing] as lesson'>
                     <div class="d-flex flex-column">
@@ -68,55 +69,57 @@
 
           </ng-container>
 
-        </tbody>
-      </table>
-    </section>
-  </accordion-group>
-</accordion>
+          </tbody>
+        </table>
+      </section>
+    </accordion-group>
+  </accordion>
 
-<ng-template #template>
-  <div class="modal-header bg-dark">
-    <h4 class="modal-title pull-left">Time Table Content Editing Form</h4>
-    <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
-      <span aria-hidden="true">&times;</span>
+  <ng-template #template>
+    <div class="modal-header bg-dark">
+      <h4 class="modal-title pull-left">Time Table Content Editing Form</h4>
+      <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+        <span aria-hidden="true">&times;</span>
 
-    </button>
-  </div>
-  <div class="modal-body bg-dark d-flex flex-wrap" *ngIf='editItemDetails$ | ngrxPush as editItemDetails'>
-    <div class="col-lg-12 d-flex justify-content-between tt-edit-details pb-3 mb-3">
-      <div>Class Level: {{ editItemDetails.classLevelName }}</div>
-      <div>Stream: {{ editItemDetails.streamName }}</div>
-      <div>Day Of the Week: {{ editItemDetails.dayOfWeekName }}</div>
-      <div>Time: {{ editItemDetails.timeValue }}</div>
+      </button>
     </div>
-    <form [formGroup]='editLessonForm' class="col-lg-12 d-flex flex-wrap justify-content-between">
+    <div class="modal-body bg-dark d-flex flex-wrap" *ngIf='editItemDetails$ | ngrxPush as editItemDetails'>
+      <div class="col-lg-12 d-flex justify-content-between tt-edit-details pb-3 mb-3">
+        <div>Class Level: {{ editItemDetails.classLevelName }}</div>
+        <div>Stream: {{ editItemDetails.streamName }}</div>
+        <div>Day Of the Week: {{ editItemDetails.dayOfWeekName }}</div>
+        <div>Time: {{ editItemDetails.timeValue }}</div>
+      </div>
+      <form [formGroup]='editLessonForm' class="col-lg-12 d-flex flex-wrap justify-content-between">
 
-      <div class="col-lg-5">
-        <label for="teacherId">Select Subject</label>
-        <ng-select style="width: 100%;" id='subjectId' [items]="units$ | ngrxPush" bindLabel="name"
-          bindValue="id" formControlName='subjectId'>
-        </ng-select>
-      </div>
-      <div class="col-lg-5">
-        <label for="teacherId">Select Teacher</label>
-        <ng-select style="width: 100%;" id='teacherId' [items]="teachers$ | ngrxPush" bindLabel="name"
-          bindValue="id" formControlName='teacherId'>
-        </ng-select>
-      </div>
-      <div class="col-lg-5">
-        <label for="teacherId">Select Room</label>
-        <ng-select style="width: 100%;" id='roomId' [items]="rooms$ | ngrxPush" bindLabel="abbreviation"
-          bindValue="id" formControlName='roomId'>
-        </ng-select>
-      </div>
-    </form>
+        <div class="col-lg-5">
+          <label for="teacherId">Select Subject</label>
+          <ng-select style="width: 100%;" id='subjectId' [items]="units$ | ngrxPush" bindLabel="name"
+                     bindValue="id" formControlName='subjectId'>
+          </ng-select>
+        </div>
+        <div class="col-lg-5">
+          <label for="teacherId">Select Teacher</label>
+          <ng-select style="width: 100%;" id='teacherId' [items]="teachers$ | ngrxPush" bindLabel="name"
+                     bindValue="id" formControlName='teacherId'>
+          </ng-select>
+        </div>
+        <div class="col-lg-5">
+          <label for="teacherId">Select Room</label>
+          <ng-select style="width: 100%;" id='roomId' [items]="rooms$ | ngrxPush" bindLabel="abbreviation"
+                     bindValue="id" formControlName='roomId'>
+          </ng-select>
+        </div>
+      </form>
 
-  </div>
-  <div class="modal-footer bg-dark">
-    <button type="button" (click)='modalRef.hide()' class="btn btn-secondary">Cancel</button>
-    <button (click)='saveLesson()' class="btn btn-success">
-      <span>Save Content</span>
-      <i class='icon-ok-1'></i>
-    </button>
-  </div>
-</ng-template>
+    </div>
+    <div class="modal-footer bg-dark">
+      <button type="button" (click)='modalRef.hide()' class="btn btn-secondary">Cancel</button>
+      <button (click)='saveLesson()' class="btn btn-success">
+        <span>Save Content</span>
+        <i class='icon-ok-1'></i>
+      </button>
+    </div>
+  </ng-template>
+
+</div>
