--- a/src/app/pages/time-table/academic-years/time-table-academic-year-edit/time-table-academic-year-edit.component.html
+++ b/src/app/pages/time-table/academic-years/time-table-academic-year-edit/time-table-academic-year-edit.component.html
@@ -115,7 +115,7 @@
     </div>
     <div class="modal-footer bg-dark">
       <button type="button" (click)='modalRef.hide()' class="btn btn-secondary">Cancel</button>
-      <button (click)='saveLesson()' class="btn btn-success">
+      <button type="button" (click)='saveLesson()' class="btn btn-success">
         <span>Save Content</span>
         <i class='icon-ok-1'></i>
       </button>
