Display room on Timetable

--- a/src/app/pages/time-table/academic-years/time-table-academic-year-view/time-table-academic-year-view.component.html
+++ b/src/app/pages/time-table/academic-years/time-table-academic-year-view/time-table-academic-year-view.component.html
@@ -69,7 +69,7 @@
     </accordion-group>
   </accordion>
 
-  <div class="alert alert-info mt-2"><span class="icon-info"></span>No time table set up yet</div>
+  <div *ngIf="timeTableLessons.length < 1" class="alert alert-info mt-2"><span class="icon-info"></span>No time table set up yet</div>
 </div>
 
 <ng-template class="card p-2" #loading>
