--- a/src/app/pages/academics/academic-year/academic-year-subject-units/academic-year-subject-units.component.html
+++ b/src/app/pages/academics/academic-year/academic-year-subject-units/academic-year-subject-units.component.html
@@ -1,14 +1,12 @@
 <form [formGroup]='allocationsForm' *ngIf='classLevels.controls.length > 0; else loading;' (submit)='submitUnitAllocationForm()'>
   <section formArrayName='classLevels' class="academic-year-subject-units">
-    <section *ngFor='let classLevel of classLevels.controls; let i = index' [formGroupName]='i'>
+    <section class="mt-4" *ngFor='let classLevel of classLevels.controls; let i = index' [formGroupName]='i'>
       <h3>{{ classLevel.value.name }}</h3>
       <ng-select class="custom" [items]="unitLevels" [multiple]="true" bindLabel="name" groupBy="gender"
         [selectableGroup]="true" [closeOnSelect]="false" bindValue="id" formControlName='unitLevels'>
         <ng-template ng-option-tmp let-item="item" let-item$="item$" let-index="index">
-          <input aria-label="Type For Suggestion" id="item-{{index}}" type="checkbox" [ngModel]="item$.selected" [ngModelOptions]="{standalone: true}" />
           {{item.name}}
         </ng-template>
-
       </ng-select>
     </section>
   </section>
