--- a/src/app/pages/academics/academic-year/academic-year.component.html
+++ b/src/app/pages/academics/academic-year/academic-year.component.html
@@ -1,2 +1,35 @@
 <h1>Academics <span class="icon-right-dir"></span> Academic Years</h1>
-<app-links [links$]='links$'></app-links>
+<div class="card p-2">
+  <app-links [links$]='links$'></app-links>
+  <section class="d-flex flex-wrap justify-content-around"
+           *ngIf='academicYears$ | ngrxPush as academicYears; else loading'>
+    <section class="card col-lg-12 mt-1" *ngFor='let academicYear of academicYears'>
+      <section class="card-header d-flex justify-content-between">
+        <h2>{{ academicYear.name }}</h2>
+        <button  [routerLink]='["/academics", "academic-year", academicYear.id, "settings"]' class="btn btn-outline-info icon-cog">Settings</button>
+      </section>
+      <section class="card-body p-2">
+        <ul class="list-group">
+          <li class="list-group-item bg-dark list-group-flush mb-1">
+            <a class="card-link  btn-block"
+               [routerLink]='["/academics", "academic-year", academicYear.id, "unit-allocations"]'>
+              Subject/Unit Allocations</a>
+          </li>
+          <li class="list-group-item bg-dark">
+            <a class="card-link btn-block"
+               [routerLink]='["/academics", "academic-year", academicYear.id, "financial-plan"]'>Financial
+              Plan</a>
+          </li>
+          <li class="list-group-item bg-dark">
+            <a class="card-link btn-block"
+               [routerLink]='["/academics", "academic-year", academicYear.id, "time-table"]'>Time
+              Table</a>
+          </li>
+        </ul>
+      </section>
+    </section>
+  </section>
+  <ng-template #loading>
+    <app-loading-bubble></app-loading-bubble>
+  </ng-template>
+</div>
