fixed failing tests

--- a/src/app/pages/academics/academic-year/delete-academic-year/delete-academic-year.component.html
+++ b/src/app/pages/academics/academic-year/delete-academic-year/delete-academic-year.component.html
@@ -1,6 +1,6 @@
 <div class="modal-header bg-dark">
   <h4 class="modal-title pull-left">Academic Year Deletion</h4>
-  <button type="button" class="close pull-right" [attr.aria-label]="isOpen ? 'Close' : 'Reopen'" (click)="closeModal()">
+  <button type="button" class="close pull-right" [attr.aria-label]="'Close'" (click)="closeModal()">
     <span aria-hidden="true">&times;</span>
 
   </button>
