--- a/src/app/components/view-items/view-items.component.html
+++ b/src/app/components/view-items/view-items.component.html
@@ -1,10 +1,13 @@
 <h1>{{ title }}</h1>
-<a [routerLink]='["create"]' type="button" class="btn btn-primary btn-sm">
-  New
-  <span class='icon-plus-circled'></span>
-</a>
-<table class="table table-bordered table-dark table-sm">
-  <thead>
+<div class="card p-2">
+  <div>
+    <a [routerLink]='["create"]' type="button" class="btn btn-primary btn-sm">
+      New
+      <span class='icon-plus-circled'></span>
+    </a>
+  </div>
+  <table class="table table-bordered table-dark table-sm">
+    <thead>
     <tr>
       <th scope="col">#</th>
       <th scope="col">Name</th>
@@ -12,8 +15,8 @@
       <th scope="col">Active</th>
       <th scope="col">Actions</th>
     </tr>
-  </thead>
-  <tbody>
+    </thead>
+    <tbody>
     <ng-container *ngIf='(items$ | ngrxPush) as items; else data_loading'>
       <tr *ngFor="let item of items;let i = index">
 
@@ -21,7 +24,7 @@
         <td *ngIf='true'>{{ item.name }}</td>
         <td class="p-1">
           <span *ngIf='item.description' [innerHTML]='(item.description | slice:0:100)'></span>
-            <a *ngIf='item.description?.length > 100' [routerLink]='[item.id, "view"]'>View More...<span class="icon-expand-right"></span></a>
+          <a *ngIf='item.description?.length > 100' [routerLink]='[item.id, "view"]'>View More...<span class="icon-expand-right"></span></a>
           <span class="icon-info badge badge-info p-2" *ngIf='!item.description'>No description available!</span>
         </td>
         <td>
@@ -29,17 +32,17 @@
         </td>
         <td class='d-flex  justify-content-between flex-wrap'>
           <button class='btn btn-primary btn-sm' [routerLink]='[item.id, "edit"]'
-            attr.aria-label="{{ 'Edit subject item ' + item.name }}" title="Edit" type="button">
+                  attr.aria-label="{{ 'Edit subject item ' + item.name }}" title="Edit" type="button">
             <i class="icon-edit" color="primary"></i><span class="sr-only">edit</span>
           </button>
           <button [disabled]='deleting[i]' class='btn btn-danger btn-sm'
-            (click)="deleteItem({id: item.id, name: item.name, index: i})"
-            attr.aria-label="{{ 'Delete subject item ' + item.name }}" title="Delete Item" type="button">
+                  (click)="deleteItem({id: item.id, name: item.name, index: i})"
+                  attr.aria-label="{{ 'Delete subject item ' + item.name }}" title="Delete Item" type="button">
             <i class="icon-trash-1" [class.animate-spin]='deleting[i]' color="primary"></i><span
-              class="sr-only">delete</span>
+            class="sr-only">delete</span>
           </button>
           <button class='btn btn-info btn-sm' [routerLink]="[item.id, 'view']"
-            attr.aria-label="{{ 'View subject item ' + item.name }}" title="View Item" type="button">
+                  attr.aria-label="{{ 'View subject item ' + item.name }}" title="View Item" type="button">
             <i class="icon-eye" color="primary"></i><span class="sr-only">view</span>
           </button>
         </td>
@@ -59,5 +62,6 @@
       </tr>
     </ng-template>
 
-  </tbody>
-</table>
+    </tbody>
+  </table>
+</div>
