--- a/src/app/pages/procurements/create-procurement-tender/create-procurement-tender.component.html
+++ b/src/app/pages/procurements/create-procurement-tender/create-procurement-tender.component.html
@@ -8,23 +8,26 @@
 <section>
   <form (submit)='submitTenderForm()' [formGroup]='tenderForm' class="d-flex flex-wrap">
     <section class="col-lg-6">
-      <app-input id='expiryDatetime' formControlName='expiryDatetime' placeholder='eg. 22-10-2010 10:30' label='Expiry Date' type='datetime-local'></app-input>
+      <app-input id='expiryDatetime' formControlName='expiryDatetime' placeholder='eg. 22-10-2010 10:30'
+                 label='Expiry Date' type='datetime-local'></app-input>
     </section>
     <section class="col-lg-6">
       <app-input id='description' formControlName='description' placeholder='Enter Description' label='Description'
-        ></app-input>
+      ></app-input>
     </section>
     <section class="col-lg-12">
       <section class='d-flex justify-content-end'>
-        <button *ngIf='!tenderForm.valid' (click)='triggerValidation = !triggerValidation' type='button'
-          class='btn btn-secondary'>Validate</button>
+        <button *ngIf='!tenderForm.valid' (click)='triggerValidationSubject$.next(true)' type='button'
+                class='btn btn-secondary'>Validate
+        </button>
         &nbsp;&nbsp;&nbsp;&nbsp;
-        <button class='btn btn-success' [disabled]='!tenderForm.valid || isSubmitting'>
+        <button class='btn btn-success' [disabled]='!tenderForm.valid || (submitInProgressAction$ | ngrxPush)'>
           Save Details
-          <i *ngIf='isSubmitting' class='icon-spin3 animate-spin'></i>
-          <i *ngIf='!isSubmitting && tenderForm.valid' class='icon-ok-1'></i>
+          <i *ngIf='(submitInProgressAction$ | ngrxPush)' class='icon-spin3 animate-spin'></i>
+          <i *ngIf='!(submitInProgressAction$ | ngrxPush) && tenderForm.valid' class='icon-ok-1'></i>
         </button>
       </section>
     </section>
   </form>
 </section>
+
