--- a/src/app/pages/academics/curriculum/stream/create-stream/create-stream.component.html
+++ b/src/app/pages/academics/curriculum/stream/create-stream/create-stream.component.html
@@ -1,5 +1,5 @@
 <app-crud
-  title='Semester'
-  [fields]='["name", "active", "abbreviation", "active"]'
+  title='Stream'
+  [fields]='fields'
   [itemService]='streamService'
 ></app-crud>
