--- a/src/app/pages/academics/curriculum/edit-class-level/edit-class-level.component.html
+++ b/src/app/pages/academics/curriculum/edit-class-level/edit-class-level.component.html
@@ -1,7 +1,7 @@
 <app-crud
   title='Class Level'
   parent='class-level-categories'
-  [fields]='["name", "active", "abbreviation", "active", "description"]'
+  [fields]='fields'
   [itemService]='classLevelService'
   [transforms]='transforms'
 ></app-crud>
