--- a/src/app/pages/academics/curriculum/semester/create-semester/create-semester.component.html
+++ b/src/app/pages/academics/curriculum/semester/create-semester/create-semester.component.html
@@ -1,5 +1,5 @@
 <app-crud
   title='Semester'
-  [fields]='["name", "active", "abbreviation", "active"]'
+  [fields]='fields'
   [itemService]='semesterService'
 ></app-crud>
