removed math module

--- a/src/app/pages/academics/exam-bank/exam-bank-archives/view-question-revision-mode/view-question-revision-mode.component.html
+++ b/src/app/pages/academics/exam-bank/exam-bank-archives/view-question-revision-mode/view-question-revision-mode.component.html
@@ -17,7 +17,7 @@
   </section>
   <section class="card-body mb-0 choices">
     <section aria-label="Question:" class="pb-2 border-bottom" tabindex="0">
-      <p [appMath]='{latex : question.description }'></p>
+      <p [innerHTML]='question.description'></p>
     </section>
     <fieldset class="bg-dark mt-1" tabindex="0">
       <legend>Choices</legend>
