--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -1,7 +1,7 @@
 <section class='form-group mb-4' style="position: relative;">
   <section class='d-flex flex-wrap m-0 p-0 align-items-center'>
   	<label [class]='"col-12 control-label " + labelClass' [attr.for]='id'>
-      <app-star-required></app-star-required>{{ label }}
+      <app-star-required *ngIf="isRequired"></app-star-required>{{ label }}
 		</label>
 	  <section [class]='inputClass ? inputClass + " input-group" + " m-0 p-0": "col-12 " + inputClass + " input-group" + " m-0 p-0"'>
 	  	<section *ngIf='prependIcon' class='input-group-prepend' [class.is-invalid]='fieldError'>
