--- a/src/app/pages/admissions/student-admissions/create-student/create-student.component.html
+++ b/src/app/pages/admissions/student-admissions/create-student/create-student.component.html
@@ -11,21 +11,21 @@
             <section class='col-lg-3'>
               <section class='custom-control custom-radio'>
                 <input id='auto-generate' type='radio' class='custom-control-input' [value]='false'
-                  name='autoGenerateId' formControlName='autoGenerateId'>
+                       name='autoGenerateId' formControlName='autoGenerateId'>
                 <label class='custom-control-label' for='auto-generate'>Automatically Generate</label>
               </section>
             </section>
             <section class='col-lg-3'>
               <section class='custom-control custom-radio'>
                 <input id='auto-generate-false' type='radio' class='custom-control-input' [value]='true'
-                  name='autoGenerateId' formControlName='autoGenerateId'>
+                       name='autoGenerateId' formControlName='autoGenerateId'>
                 <label class='custom-control-label' for='auto-generate-false'>Enter Manually</label>
               </section>
             </section>
             <section class='col'>
               <app-input labelClass='col-lg-6' inputClass='col-sm-6 col-lg-6' [triggerValidation]='triggerValidation'
-                *ngIf='autoGenerate.value === true' formControlName='schoolIdNumber' label='School Id Number'
-                placeholder='Enter School Id Number'>
+                         *ngIf='autoGenerate.value === true' formControlName='schoolIdNumber' label='School Id Number'
+                         placeholder='Enter School Id Number'>
               </app-input>
             </section>
           </section>
@@ -39,12 +39,12 @@
       <section class='d-flex flex-wrap align-items-center'>
         <section class='col-lg-4 col-sm-6 col-xs-12'>
           <app-input [triggerValidation]='triggerValidation' placeholder='Enter First Name' id='firstName'
-            label='First Name' formControlName='firstName'>
+                     label='First Name' formControlName='firstName'>
           </app-input>
         </section>
         <section class='col-lg-4 col-sm-6 col-xs-12'>
           <app-input [triggerValidation]='triggerValidation' placeholder='Enter Last Name' id='lastName'
-            label='Last Name' formControlName='lastName'>
+                     label='Last Name' formControlName='lastName'>
           </app-input>
         </section>
         <section class='col-lg-4 col-sm-6 col-xs-12'>
@@ -61,19 +61,19 @@
   <div class="card p-2 mt-1 pb-4">
     <fieldset>
       <legend>Other Details</legend>
-      <section class='d-flex flex-wrap'>
-        <div class="col-lg-12 dflex flex-wrap">
-          <section class='col-lg-5 col-md-6 col-sm-7 col-xs-12'>
-            <app-input labelClass='col-lg-5' inputClass='col-md-6 col-lg-7' type='date' [triggerValidation]='triggerValidation'
-              placeholder='Enter Date Of Birth' id='dateOfBirth' label='Date Of Birth' formControlName='dateOfBirth'>
-            </app-input>
-          </section>
-        </div>
-        <section class='col-lg-5 col-md-6 col-sm-6 col-xs-12 d-flex flex-wrap m-0 p-0 mt-xs-1 mt-sm-0'>
-          <label class="col-lg-5 control-label" for="genderField">
+      <section class='d-flex flex-wrap align-items-start' >
+        <section class='col-lg-4 col-sm-6 col-xs-12'>
+          <app-input type='date'
+                     [triggerValidation]='triggerValidation'
+                     placeholder='Enter Date Of Birth' id='dateOfBirth' label='Date Of Birth'
+                     formControlName='dateOfBirth'>
+          </app-input>
+        </section>
+        <section class='col-lg-4 col-sm-6 col-xs-12 d-flex flex-wrap mt-xs-1 mt-sm-0 mb-3'>
+          <label class="col-12 control-label" for="genderField">
             Gender
           </label>
-          <section class="col-xs-12 col-lg-7">
+          <section class="col-12 m-0 p-0">
             <select formControlName='gender' id="genderField" class="custom-select">
               <ng-container *ngIf='(genders$ | ngrxPush) as genders'>
                 <ng-container *ngIf='genders[0]?.id; else genderLoading'>
@@ -83,17 +83,17 @@
                   </ng-container>
                 </ng-container>
                 <ng-template #genderLoading>
-                  <option value="">Please wait ... </option>
+                  <option value="">Please wait ...</option>
                 </ng-template>
               </ng-container>
             </select>
           </section>
         </section>
-        <section class='col-lg-5 col-md-6 col-sm-6 col-xs-12 d-flex flex-wrap m-0 p-0 mt-xs-1 mt-sm-0'>
-          <label class="col-lg-5 control-label" for="religionField">
+        <section class='col-lg-4 col-sm-6 col-xs-12 d-flex flex-wrap mt-xs-1 mt-sm-0'>
+          <label class="col-12 control-label" for="religionField">
             Religion
           </label>
-          <section class="col-xs-12 col-lg-7">
+          <section class="col-12 p-0">
             <select formControlName='religion' id="religionField" class="custom-select">
               <ng-container *ngIf='(religions$ | ngrxPush) as religions' )>
                 <ng-container *ngIf='religions[0]?.id; else religionLoading'>
@@ -103,7 +103,7 @@
                   </ng-container>
                 </ng-container>
                 <ng-template #religionLoading>
-                  <option value="">Please wait ... </option>
+                  <option value="">Please wait ...</option>
                 </ng-template>
               </ng-container>
 
@@ -116,7 +116,8 @@
 
   <section class="col-lg-12 mt-2">
     <app-validate-submit-buttons [isSubmitting]='isSubmitting'
-      (validationButtonClicked)='triggerValidation = !triggerValidation' [formItem]='newStudentForm'>
+                                 (validationButtonClicked)='triggerValidation = !triggerValidation'
+                                 [formItem]='newStudentForm'>
       <span>Create Student</span>
     </app-validate-submit-buttons>
   </section>
