--- a/src/app/components/user-profile/user-select-item/user-select-item.component.html
+++ b/src/app/components/user-profile/user-select-item/user-select-item.component.html
@@ -18,8 +18,8 @@
           <span class="icon-save"></span>Save </button>
       </div>
     </div>
-    <span class='label-name col-xs-12 col-sm-4 col-md-5 col-lg-4'>{{ label | titlecase }}:</span>
-    <span class='label-value col col-xs-12 d-flex justify-content-between'>
+    <span class='label-name col-12'>{{ label | titlecase }}:</span>
+    <span class='label-value col-12 d-flex justify-content-between'>
       <span>
         &nbsp;{{ valueName | titlecase }}
       </span>
