--- a/src/app/pages/my-profile/my-profile-info/my-profile-info.component.html
+++ b/src/app/pages/my-profile/my-profile-info/my-profile-info.component.html
@@ -13,20 +13,20 @@
   </section>
   <section class='col-lg-6 col-md-10 col-sm-12 mt-3'>
     <section class='d-flex flex-wrap'>
-      <span class='label-name col-xs-12 col-sm-4 col-md-5 col-lg-4'>Gender:</span>
-      <span class='label-value col-lg-8 col-md-7 col-sm-8 col-xs-12'> {{ profile.genderName }}</span>
+      <span class='label-name col-12'>Gender:</span>
+      <span class='label-value col-12'> {{ profile.genderName }}</span>
     </section>
   </section>
   <section class='col-lg-6 col-md-10 col-sm-12 mt-3'>
     <section class='d-flex flex-wrap'>
-      <span class='label-name col-xs-12 col-sm-4 col-md-5 col-lg-4'>Date of Birth:</span>
-      <span class='label-value col-lg-8 col-md-7 col-sm-8 col-xs-12'> {{ profile.dateOfBirth }}</span>
+      <span class='label-name col-12'>Date of Birth:</span>
+      <span class='label-value col-12'> {{ profile.dateOfBirth }}</span>
     </section>
   </section>
   <section class='col-lg-6 col-md-10 col-sm-12 mt-3'>
     <section class='d-flex flex-wrap'>
-      <span class='label-name col-xs-12 col-sm-4 col-lg-4 col-md-5'>Religion:</span>
-      <span class='label-value col-lg-8 col-md-7 col-sm-8 col-xs-12'> {{ profile.religionName }}</span>
+      <span class='label-name col-12'>Religion:</span>
+      <span class='label-value col-12'> {{ profile.religionName }}</span>
     </section>
   </section>
 </section>
