--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -1,27 +1,27 @@
-<section  class='form-group mb-4' style="position: relative;" [formGroup]="inputGroup">
+<section class='form-group mb-4' style="position: relative;">
   <section class='d-flex flex-wrap m-0 p-0 align-items-center'>
-  	<label [class]='"col-12 control-label " + labelClass' [attr.for]='id'>
-      <app-star-required *ngIf="isRequired"></app-star-required>{{ label }}
+  	<label [class]='"col-md-12 col-lg-12 col-sm-12 control-label " + labelClass + " m-0 p-0"' [for]='id'>
+			<span class='icon-star required' [class.required-inVisible]='!isRequired'></span>{{ label }}
 		</label>
-	  <section [class]='inputClass ? inputClass + " input-group" + " m-0 p-0": "col-12 " + inputClass + " input-group" + " m-0 p-0"'>
+	  <section [class]='inputClass ? inputClass + " input-group" + " m-0 p-0": "col-md-12 col-lg-12 " + inputClass + " input-group" + " m-0 p-0"'>
 	  	<section *ngIf='prependIcon' class='input-group-prepend' [class.is-invalid]='fieldError'>
-	      <span *ngrxLet="valueChanges$" class='input-group-text' [id]='"inputGroupPrepend" + id'><i [class]='prependIcon'></i></span>
+	      <span class='input-group-text' [id]='"inputGroupPrepend" + id'><i [class]='prependIcon'></i></span>
 	    </section>
 			<input
 				[step]='step'
 				[min]='min'
 	      [autocomplete]='autocomplete'
 	      [autofocus]='autofocus'
-	      formControlName='value'
+	      [formControl]='formControl'
 	      (keyup)='updateFieldValidation()'
 				class='form-control'
 				[class.is-invalid]='fieldError'
 				[class.is-valid]='formControl.valid && formControl.touched'
 	      (blur)='validateField()'
-	      [id]='id'
+	      [id]='[id]'
 	      [type]='fieldType'
 				[placeholder]='placeholder'>
-				<section class='input-group-append' *ngIf='type === "password"' >
+				<section class='input-group-append' *ngIf='type === "password"'>
 					<button
 						appShowPassword
 						(toggleType)='fieldType = $event' type="button" class='show-password'>
@@ -37,6 +37,3 @@
 	</section>
 	<app-password-meter *ngIf='showPasswordStrength' [passwordString]='passwordStringChangeAction$ | ngrxPush'></app-password-meter>
 </section>
-
-{{ formControl.value }}
-{{ formControl.valid }}
