--- a/src/app/pages/guardians/view-guardian-info/view-guardian-info.component.html
+++ b/src/app/pages/guardians/view-guardian-info/view-guardian-info.component.html
@@ -1,8 +1,14 @@
-<section class='d-flex flex-wrap name-field  mt-4' *ngIf='(guardianProfile$ | ngrxPush) as profile; else content_loading'>
+<section class='d-flex flex-wrap name-field  mt-4'
+         *ngIf='(guardianProfile$ | ngrxPush) as profile; else content_loading'>
   <section class='col-lg-4 col-md-5 col-sm-6'>
     <section class='d-flex flex-wrap'>
       <span class='label-name col-12'>Gender:</span>
-      <span class='label-value col col-xs-12'> {{ profile.gender }}</span>
+      <span class='label-value col col-xs-12'>
+        <ng-container *ngIf="!profile.genderName">
+          <span class="text-warning">Not Specified</span>
+        </ng-container>
+        {{ profile.genderName }}
+      </span>
     </section>
   </section>
   <section class='col-md-7 col-lg-4 col-sm-6'>
@@ -14,7 +20,11 @@
   <section class='col-lg-4 col-md-5 col-sm-6'>
     <section class='d-flex flex-wrap'>
       <span class='label-name col-12'>Religion:</span>
-      <span class='label-value col-12'> {{ profile.religion }}</span>
+      <span class='label-value col-12'>
+        <ng-container *ngIf="!profile.religionName">
+          <span class="text-warning">Not Specified</span>
+        </ng-container>
+        {{ profile.religionName }}</span>
     </section>
   </section>
 </section>
