--- a/src/app/pages/guardians/view-guardian-info/view-guardian-info.component.html
+++ b/src/app/pages/guardians/view-guardian-info/view-guardian-info.component.html
@@ -1,6 +1,28 @@
 <section class='d-flex flex-wrap name-field  mt-4'
          *ngIf='(guardianProfile$ | ngrxPush) as profile; else content_loading'>
-  <section class='col-lg-4 col-md-5 col-sm-6'>
+  <section class='col-lg-4 col-md-5 col-sm-6 mb-lg-3'>
+    <section class='d-flex flex-wrap'>
+      <span class='label-name col-12'>Email:</span>
+      <span class='label-value col col-xs-12'>
+        <ng-container *ngIf="!profile.email">
+          <span class="text-warning">Not Specified</span>
+        </ng-container>
+        {{ profile.email }}
+      </span>
+    </section>
+  </section>
+  <section class='col-lg-4 col-md-5 col-sm-6 mb-lg-3'>
+    <section class='d-flex flex-wrap'>
+      <span class='label-name col-12'>Phone:</span>
+      <span class='label-value col col-xs-12'>
+        <ng-container *ngIf="!profile.phone">
+          <span class="text-warning">Not Specified</span>
+        </ng-container>
+        {{ profile.phone }}
+      </span>
+    </section>
+  </section>
+  <section class='col-lg-4 col-md-5 col-sm-6 mb-lg-3'>
     <section class='d-flex flex-wrap'>
       <span class='label-name col-12'>Gender:</span>
       <span class='label-value col col-xs-12'>
@@ -11,13 +33,13 @@
       </span>
     </section>
   </section>
-  <section class='col-md-7 col-lg-4 col-sm-6'>
+  <section class='col-md-7 col-lg-4 col-sm-6 mb-lg-3'>
     <section class='d-flex flex-wrap'>
       <span class='label-name col-12'>Date Of Birth:</span>
       <span class='label-value col-12'> {{ profile.dateOfBirth }}</span>
     </section>
   </section>
-  <section class='col-lg-4 col-md-5 col-sm-6'>
+  <section class='col-lg-4 col-md-5 col-sm-6 mb-lg-3'>
     <section class='d-flex flex-wrap'>
       <span class='label-name col-12'>Religion:</span>
       <span class='label-value col-12'>
