Added date picker

--- a/src/app/pages/admissions/staff-admissions/create-teacher/create-teacher.component.html
+++ b/src/app/pages/admissions/staff-admissions/create-teacher/create-teacher.component.html
@@ -52,7 +52,7 @@
       <legend>Other DetailS</legend>
       <section class='d-flex flex-wrap'>
         <section class='col-lg-4 col-md-6 col-sm-12 col-xs-12'>
-          <app-input type='date'
+          <app-input type='dob'
                      [triggerValidation]='triggerValidationAction$ | ngrxPush' placeholder='Enter Date Of Birth' id='dateOfBirth'
                      label='Date Of Birth' formControlName='dateOfBirth'>
           </app-input>
