--- a/src/app/pages/admissions/student-admissions/create-student/create-student.component.html
+++ b/src/app/pages/admissions/student-admissions/create-student/create-student.component.html
@@ -63,7 +63,7 @@
       <legend>Other Details</legend>
       <section class='d-flex flex-wrap align-items-start' >
         <section class='col-lg-4 col-sm-6 col-xs-12'>
-          <app-input type='date'
+          <app-input type='dob'
                      [triggerValidation]='triggerValidation'
                      placeholder='Enter Date Of Birth' id='dateOfBirth' label='Date Of Birth'
                      formControlName='dateOfBirth'>
