--- a/src/app/pages/students/create-student-guardian/create-student-guardian.component.html
+++ b/src/app/pages/students/create-student-guardian/create-student-guardian.component.html
@@ -90,7 +90,7 @@
                 <section class='col-lg-4 col-md-4 col-sm-6 col-xs-12'>
                   <app-input [triggerValidation]="triggerValidationAction$ | ngrxPush" label='Date of Birth'
                              [id]='"dateOfBirth" + i'
-                             type='date' placeholder="Date Of Birth" formControlName="dateOfBirth"></app-input>
+                             type='dob' placeholder="Date Of Birth" formControlName="dateOfBirth"></app-input>
                 </section>
                 <section class='col-lg-4 col-md-4 col-sm-6 col-xs-12'>
                   <app-input [id]='"birth-cert-no-" + i' label='Birth Cert No'
