--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -7,20 +7,66 @@
 	  	<section *ngIf='prependIcon' class='input-group-prepend' [class.is-invalid]='fieldError'>
 	      <span class='input-group-text' [id]='"inputGroupPrepend" + id'><i [class]='prependIcon'></i></span>
 	    </section>
-			<input
-				[step]='step'
-				[min]='min'
-	      [autocomplete]='autocomplete'
-	      [autofocus]='autofocus'
-	      [formControl]='formControl'
-	      (keyup)='updateFieldValidation()'
-				class='form-control'
-				[class.is-invalid]='fieldError'
-				[class.is-valid]='formControl.valid && formControl.touched'
-	      (blur)='validateField()'
-	      [id]='[id]'
-	      [type]='fieldType'
-				[placeholder]='placeholder'>
+
+      <ng-container [ngSwitch]="type">
+        <ng-container *ngSwitchCase="'dob'">
+          <input
+            *ngIf="type === 'dob'"
+            bsDatepicker
+            [step]='step'
+            [min]='min'
+            [autocomplete]='autocomplete'
+            [autofocus]='autofocus'
+            [formControl]='formControl'
+            class='form-control'
+            [class.is-invalid]='fieldError'
+            [class.is-valid]='formControl.valid && formControl.touched'
+            (blur)='validateField()'
+            (bsValueChange)='updateFieldValidation()'
+            [id]='[id]'
+            type="text"
+            [placeholder]='placeholder'>
+        </ng-container>
+        <ng-container *ngSwitchCase="'dob'">
+          <input
+            *ngIf="type === 'date'"
+            bsDatepicker
+            [step]='step'
+            [min]='min'
+            [autocomplete]='autocomplete'
+            [autofocus]='autofocus'
+            [formControl]='formControl'
+            class='form-control'
+            [class.is-invalid]='fieldError'
+            [class.is-valid]='formControl.valid && formControl.touched'
+            (blur)='validateField()'
+            (bsValueChange)='updateFieldValidation()'
+            [id]='[id]'
+            type="text"
+            [placeholder]='placeholder'>
+        </ng-container>
+        <ng-container *ngSwitchDefault>
+          <input
+            *ngIf="type !== 'date'"
+            [step]='step'
+            [min]='min'
+            [autocomplete]='autocomplete'
+            [autofocus]='autofocus'
+            [formControl]='formControl'
+            (keyup)='updateFieldValidation()'
+            class='form-control'
+            [class.is-invalid]='fieldError'
+            [class.is-valid]='formControl.valid && formControl.touched'
+            (blur)='validateField()'
+            [id]='[id]'
+            [type]='fieldType'
+            [placeholder]='placeholder'>
+        </ng-container>
+
+      </ng-container>
+
+
+
 				<section class='input-group-append' *ngIf='type === "password"'>
 					<button
 						appShowPassword
