--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -13,6 +13,7 @@
           <input
             *ngIf="type === 'dob'"
             bsDatepicker
+            [bsConfig]="dateOfBirthPickerConfig"
             [step]='step'
             [min]='min'
             [autocomplete]='autocomplete'
