--- a/src/app/pages/students/view-student-info/view-student-info.component.html
+++ b/src/app/pages/students/view-student-info/view-student-info.component.html
@@ -4,7 +4,7 @@
       [value]='profile.gender_id' [label]='"gender"' [items]='genders$' [userId]='profile.id'></app-user-select-item>
   </section>
   <section class='col-lg-4 col-md-6 col-sm-12 mb-3'>
-    <app-name-item type='dob' (valueChanged)='changeProfile("dateOfBirth", $event)' [userId]='profile.id' label='Date of Birth'
+    <app-name-item key="dateOfBirth" type='dob' (valueChanged)='changeProfile("dateOfBirth", $event)' [userId]='profile.id' label='Date of Birth'
       [name]='profile.dateOfBirth'></app-name-item>
   </section>
   <section class='col-lg-4 col-md-6 col-sm-12 mb-3'>
