--- a/src/app/pages/teachers/view-teacher-info/view-teacher-info.component.html
+++ b/src/app/pages/teachers/view-teacher-info/view-teacher-info.component.html
@@ -5,7 +5,7 @@
   </section>
 
     <section class='col-md-7 col-lg-5 col-sm-12 mb-3'>
-      <app-name-item key="phone" type='tel' (valueChanged)='changeProfile("Phone", $event)' [userId]='profile.id' label='Phone'
+      <app-name-item key="phone" type='tel' (valueChanged)='changeProfile("phone", $event)' [userId]='profile.id' label='Phone'
         [name]='profile.phone'></app-name-item>
     </section>
 
